# npp-RL

./: .gitignore  .pre-commit-config.yaml  README.md  actions_in_gui_magic.ipynb  phase1_training.ipynb  phase2.ipynb  phase2_jupyter.ipynb  phase3_combi1.ipynb  phase3_combi1_new_sac.ipynb  phase3_combi2.ipynb  phase3_combi3.ipynb  phase3_combi4.ipynb  phase3_combi5.ipynb  phase3_combi6.ipynb  phase3_different_exp.ipynb  phase3_different_exp_with_new_combi1.ipynb  phase3_general_comp.ipynb  phase_2_jupyter.ipynb  phase_3_jupyter.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: black.yml  pytest.yml
src/main/RL/: eval.py  eval_frontend.py  training.py
src/main/RL/envs/: scenario1.py  scenario2.py  scenario3.py  szenario1.py
src/main/RL/utils/: CallbbackService.py  constants.py  utils.py
src/main/RL/wrapper/: ActionSpaceOption2Wrapper.py  ActionSpaceOption3Wrapper.py  ObservationOption2Wrapper.py  ObservationOption3Wrapper.py  ObservationOption4Wrapper.py  ObservationOption5Wrapper.py
src/main/dto/: Condenser.py  FullReactor.py  Generator.py  Pump.py  Reactor.py  SteamValve.py  Tank.py  Turbine.py  WaterValve.py
src/main/rl/: eval.py  eval_frontend.py  main.py  training.py
src/main/rl/envs/: scenario1.py  scenario2.py  scenario3.py  sop.py
src/main/rl/evaluation/: criticality_helper.py  eval.py  eval_frontend.py  sop.py  (+8 more)
src/main/services/: BackgroundStepService.py  CalculatorService.py  NPPAutomationService.py  NPPAutomationStepService.py  ReactorCreatorService.py
src/tests/RL/: test_training.py
src/tests/rl/: test_training.py
(+63 files in other folders)
